# zaplify-ai-flow

./: .gitignore  ARCHITECTURE_DOCUMENTATION.md  CLEANUP_SUMMARY.md  README.md  docker-init.md  start-dev.bat
analytics-service/: main.py  (+5 more)
services/ia-conversational/: .env.example  .env.kafka.example  GUARDRAILS_CONFIG.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROMPT_10_IMPLEMENTATION_SUMMARY.md  PROMPT_11_IMPLEMENTATION_SUMMARY.md  PROMPT_12_IMPLEMENTATION_SUMMARY.md  PROMPT_3_IMPLEMENTATION_SUMMARY.md  PROMPT_4_IMPLEMENTATION_SUMMARY.md  PROMPT_6_IMPLEMENTATION_SUMMARY.md  PROMPT_7_IMPLEMENTATION_SUMMARY.md  PROMPT_8_IMPLEMENTATION_SUMMARY.md  PROMPT_9_IMPLEMENTATION_SUMMARY.md  RAG_SETUP_GUIDE.md  README.md  demo_nlp.py  dockerfile  event_schema_demo.py  kafka_demo.py  migrations.sql  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  scripts.ps1  scripts.sh  supabase_setup.sql  tasks.ps1  test_conversation_memory.py  test_rag_import.py
services/ia-conversational/app/: config.py  main.py  otel.py
services/ia-conversational/app/api/: __init__.py  assistants.py  conversation.py  health.py  intent.py  rag.py  rag_new.py  sentiment.py
services/ia-conversational/app/core/: database.py  feature_flags.py  logging.py  metrics.py  redis.py
services/ia-conversational/app/db/: migrations.py
services/ia-conversational/app/events/: __init__.py  kafka.py  schemas.py
services/ia-conversational/app/middleware/: correlation.py
services/ia-conversational/app/schemas/: assistant.py
services/ia-conversational/test/: test_api_enhanced.py  test_nlp_service.py
(+340 files in other folders)
